Improve warehouse API error handling
